// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`medpack defaults to development 1`] = `
Object {
  "config": Object {
    "devtool": "cheap-module-source-map",
    "entry": Array [
      "/Users/kyle/dev/libraries/medpack/src/config/polyfills",
      "react-dev-utils/webpackHotDevClient",
      "/Users/kyle/dev/libraries/medpack/src/index.js",
    ],
    "mode": "development",
    "module": Object {
      "rules": Array [
        Object {
          "parser": Object {
            "requireEnsure": false,
          },
        },
        Object {
          "oneOf": Array [
            Object {
              "loader": "url-loader",
              "options": Object {
                "limit": 10000,
                "name": "static/media/[name].[hash:8].[ext]",
              },
              "test": Array [
                /\\\\\\.bmp\\$/,
                /\\\\\\.gif\\$/,
                /\\\\\\.jpe\\?g\\$/,
                /\\\\\\.png\\$/,
              ],
            },
            Object {
              "exclude": /node_modules/,
              "test": /\\(js\\|jsx\\)\\$/,
              "use": Array [
                Object {
                  "loader": "babel-loader",
                  "options": Object {
                    "cacheDirectory": false,
                    "highlightCode": true,
                    "plugins": Array [
                      Array [
                        "@babel/plugin-proposal-decorators",
                        Object {
                          "legacy": true,
                        },
                      ],
                      "@babel/plugin-transform-destructuring",
                      Array [
                        "@babel/plugin-proposal-class-properties",
                        Object {
                          "loose": true,
                        },
                      ],
                      Array [
                        "@babel/plugin-proposal-object-rest-spread",
                        Object {
                          "useBuiltIns": true,
                        },
                      ],
                      Array [
                        "@babel/plugin-transform-runtime",
                        Object {
                          "helpers": false,
                          "regenerator": true,
                        },
                      ],
                      "@babel/plugin-syntax-dynamic-import",
                      "@babel/plugin-proposal-export-default-from",
                      "babel-plugin-lodash",
                    ],
                    "presets": Array [
                      Array [
                        "@babel/env",
                        Object {
                          "modules": false,
                          "useBuiltIns": "entry",
                        },
                      ],
                      Array [
                        "@babel/react",
                        Object {
                          "development": false,
                          "useBuiltIns": true,
                        },
                      ],
                      "@babel/flow",
                    ],
                  },
                },
              ],
            },
            Object {
              "exclude": /\\\\\\.module\\\\\\.css\\$/,
              "test": /\\\\\\.css\\$/,
              "use": Array [
                "style-loader",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "importLoaders": 1,
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": false,
                  },
                },
              ],
            },
            Object {
              "test": /\\\\\\.module\\\\\\.css\\$/,
              "use": Array [
                "style-loader",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "camelCase": true,
                    "importLoaders": 1,
                    "localIdentName": "[name]__[local]___[hash:base64:5]",
                    "modules": true,
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": false,
                  },
                },
              ],
            },
            Object {
              "exclude": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
              "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
              "use": Array [
                "style-loader",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "importLoaders": 2,
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "sass-loader",
                  "options": Object {
                    "sourceMap": false,
                  },
                },
              ],
            },
            Object {
              "test": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
              "use": Array [
                "style-loader",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "camelCase": true,
                    "importLoaders": 2,
                    "localIdentName": "[name]__[local]___[hash:base64:5]",
                    "modules": true,
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": false,
                  },
                },
                Object {
                  "loader": "sass-loader",
                  "options": Object {
                    "sourceMap": false,
                  },
                },
              ],
            },
            Object {
              "exclude": Array [
                /\\\\\\.\\(js\\|jsx\\|mjs\\)\\$/,
                /\\\\\\.html\\$/,
                /\\\\\\.json\\$/,
              ],
              "loader": "file-loader",
              "options": Object {
                "name": "static/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
      ],
    },
    "optimization": Object {
      "runtimeChunk": Object {
        "name": "manifest",
      },
      "splitChunks": Object {
        "cacheGroups": Object {
          "async-vendors": Object {
            "chunks": "async",
            "minChunks": 2,
            "name": "async-vendors",
            "priority": 0,
            "test": /node_modules/,
          },
          "vendors": Object {
            "chunks": "initial",
            "name": "vendors",
            "priority": -10,
            "test": /node_modules/,
          },
        },
      },
    },
    "output": Object {
      "chunkFilename": "static/js/[name].chunk.js",
      "devtoolModuleFilenameTemplate": [Function],
      "filename": "static/js/bundle.js",
      "pathinfo": true,
      "publicPath": "/",
    },
    "plugins": Array [
      HtmlWebpackPlugin {
        "assetJson": undefined,
        "childCompilationOutputName": undefined,
        "childCompilerHash": undefined,
        "hash": undefined,
        "options": Object {
          "cache": true,
          "chunks": "all",
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": true,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
            "keepClosingSlash": true,
            "minifyCSS": true,
            "minifyJS": true,
            "minifyURLs": true,
            "removeComments": true,
            "removeEmptyAttributes": true,
            "removeRedundantAttributes": true,
            "removeStyleLinkTypeAttributes": true,
            "useShortDoctype": true,
          },
          "showErrors": true,
          "template": "/Users/kyle/dev/libraries/medpack/public/index.html",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "Webpack App",
          "xhtml": false,
        },
        "version": 4,
      },
      InterpolateHtmlPlugin {
        "htmlWebpackPlugin": [Function],
        "replacements": Object {
          "NODE_ENV": "test",
          "PUBLIC_URL": "",
        },
      },
      DefinePlugin {
        "definitions": Object {
          "process.env": Object {
            "NODE_ENV": "\\"test\\"",
            "PUBLIC_URL": "\\"\\"",
          },
        },
      },
      ManifestPlugin {
        "opts": Object {
          "basePath": "",
          "fileName": "asset-manifest.json",
          "filter": null,
          "generate": null,
          "map": null,
          "publicPath": "/",
          "seed": null,
          "serialize": [Function],
          "sort": null,
          "transformExtensions": /\\^\\(gz\\|map\\)\\$/i,
          "writeToFileEmit": false,
        },
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": /moment\\$/,
          "resourceRegExp": /\\^\\\\\\.\\\\/locale\\$/,
        },
      },
      HotModuleReplacementPlugin {
        "fullBuildTimeout": 200,
        "multiStep": undefined,
        "options": Object {},
        "requestTimeout": 10000,
      },
      CaseSensitivePathsPlugin {
        "fsOperations": 0,
        "options": Object {},
        "pathCache": Object {},
        "primed": false,
      },
      WatchMissingNodeModulesPlugin {
        "nodeModulesPath": "/Users/kyle/dev/libraries/medpack/node_modules",
      },
    ],
  },
  "env": Object {
    "NODE_ENV": "test",
    "PUBLIC_URL": "",
  },
  "paths": Object {
    "appBuild": "/Users/kyle/dev/libraries/medpack/build",
    "appHtml": "/Users/kyle/dev/libraries/medpack/public/index.html",
    "appIndexJs": "/Users/kyle/dev/libraries/medpack/src/index.js",
    "appNodeModules": "/Users/kyle/dev/libraries/medpack/node_modules",
    "appPackageJson": "/Users/kyle/dev/libraries/medpack/package.json",
    "appPath": "/Users/kyle/dev/libraries/medpack",
    "appPublic": "/Users/kyle/dev/libraries/medpack/public",
    "appSrc": "/Users/kyle/dev/libraries/medpack/src",
    "dotenv": "/Users/kyle/dev/libraries/medpack/.env",
    "publicUrl": undefined,
    "servedPath": "/",
    "srcPaths": Array [
      "/Users/kyle/dev/libraries/medpack/src",
    ],
    "testsSetup": "/Users/kyle/dev/libraries/medpack/src/setupTests.js",
  },
}
`;

exports[`medpack production 1`] = `
Object {
  "config": Object {
    "bail": true,
    "devtool": "source-map",
    "entry": Array [
      "/Users/kyle/dev/libraries/medpack/src/config/polyfills",
      "/Users/kyle/dev/libraries/medpack/src/index.js",
    ],
    "mode": "production",
    "module": Object {
      "rules": Array [
        Object {
          "parser": Object {
            "requireEnsure": false,
          },
        },
        Object {
          "oneOf": Array [
            Object {
              "loader": "url-loader",
              "options": Object {
                "limit": 10000,
                "name": "static/media/[name].[hash:8].[ext]",
              },
              "test": Array [
                /\\\\\\.bmp\\$/,
                /\\\\\\.gif\\$/,
                /\\\\\\.jpe\\?g\\$/,
                /\\\\\\.png\\$/,
              ],
            },
            Object {
              "exclude": /node_modules/,
              "test": /\\(js\\|jsx\\)\\$/,
              "use": Array [
                Object {
                  "loader": "babel-loader",
                  "options": Object {
                    "cacheDirectory": false,
                    "highlightCode": true,
                    "plugins": Array [
                      Array [
                        "@babel/plugin-proposal-decorators",
                        Object {
                          "legacy": true,
                        },
                      ],
                      "@babel/plugin-transform-destructuring",
                      Array [
                        "@babel/plugin-proposal-class-properties",
                        Object {
                          "loose": true,
                        },
                      ],
                      Array [
                        "@babel/plugin-proposal-object-rest-spread",
                        Object {
                          "useBuiltIns": true,
                        },
                      ],
                      Array [
                        "@babel/plugin-transform-runtime",
                        Object {
                          "helpers": false,
                          "regenerator": true,
                        },
                      ],
                      "@babel/plugin-syntax-dynamic-import",
                      "@babel/plugin-proposal-export-default-from",
                      "babel-plugin-lodash",
                    ],
                    "presets": Array [
                      Array [
                        "@babel/env",
                        Object {
                          "modules": false,
                          "useBuiltIns": "entry",
                        },
                      ],
                      Array [
                        "@babel/react",
                        Object {
                          "development": false,
                          "useBuiltIns": true,
                        },
                      ],
                      "@babel/flow",
                    ],
                  },
                },
              ],
            },
            Object {
              "exclude": /\\\\\\.module\\\\\\.css\\$/,
              "test": /\\\\\\.css\\$/,
              "use": Array [
                "/Users/kyle/dev/libraries/medpack/node_modules/mini-css-extract-plugin/dist/loader.js",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "importLoaders": 1,
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": true,
                  },
                },
              ],
            },
            Object {
              "test": /\\\\\\.module\\\\\\.css\\$/,
              "use": Array [
                "/Users/kyle/dev/libraries/medpack/node_modules/mini-css-extract-plugin/dist/loader.js",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "camelCase": true,
                    "importLoaders": 1,
                    "localIdentName": "[name]__[local]___[hash:base64:5]",
                    "modules": true,
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": true,
                  },
                },
              ],
            },
            Object {
              "exclude": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
              "test": /\\\\\\.\\(scss\\|sass\\)\\$/,
              "use": Array [
                "/Users/kyle/dev/libraries/medpack/node_modules/mini-css-extract-plugin/dist/loader.js",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "importLoaders": 2,
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "sass-loader",
                  "options": Object {
                    "sourceMap": true,
                  },
                },
              ],
            },
            Object {
              "test": /\\\\\\.module\\\\\\.\\(scss\\|sass\\)\\$/,
              "use": Array [
                "/Users/kyle/dev/libraries/medpack/node_modules/mini-css-extract-plugin/dist/loader.js",
                Object {
                  "loader": "css-loader",
                  "options": Object {
                    "camelCase": true,
                    "importLoaders": 2,
                    "localIdentName": "[name]__[local]___[hash:base64:5]",
                    "modules": true,
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "postcss-loader",
                  "options": Object {
                    "ident": "postcss",
                    "plugins": [Function],
                    "sourceMap": true,
                  },
                },
                Object {
                  "loader": "sass-loader",
                  "options": Object {
                    "sourceMap": true,
                  },
                },
              ],
            },
            Object {
              "exclude": Array [
                /\\\\\\.\\(js\\|jsx\\|mjs\\)\\$/,
                /\\\\\\.html\\$/,
                /\\\\\\.json\\$/,
              ],
              "loader": "file-loader",
              "options": Object {
                "name": "static/media/[name].[hash:8].[ext]",
              },
            },
          ],
        },
      ],
    },
    "optimization": Object {
      "minimizer": Array [
        UglifyJsPlugin {
          "options": Object {
            "cache": true,
            "cacheKeys": [Function],
            "exclude": undefined,
            "extractComments": false,
            "include": undefined,
            "minify": undefined,
            "parallel": true,
            "sourceMap": true,
            "test": /\\\\\\.js\\(\\\\\\?\\.\\*\\)\\?\\$/i,
            "uglifyOptions": Object {
              "compress": Object {
                "comparisons": false,
                "warnings": false,
              },
              "output": Object {
                "ascii_only": true,
                "comments": false,
              },
            },
            "warningsFilter": [Function],
          },
        },
        OptimizeCssAssetsWebpackPlugin {
          "deleteAssetsMap": Object {},
          "options": Object {
            "assetNameRegExp": /\\\\\\.css\\$/g,
            "assetProcessors": Array [
              Object {
                "phase": "compilation.optimize-chunk-assets",
                "processor": [Function],
                "regExp": /\\\\\\.css\\$/g,
              },
            ],
            "canPrint": undefined,
            "cssProcessor": [Function],
            "cssProcessorOptions": Object {},
            "cssProcessorPluginOptions": Object {},
          },
          "phaseAssetProcessors": Object {
            "compilation.optimize-assets": Array [],
            "compilation.optimize-chunk-assets": Array [
              Object {
                "phase": "compilation.optimize-chunk-assets",
                "processor": [Function],
                "regExp": /\\\\\\.css\\$/g,
              },
            ],
            "emit": Array [],
          },
          "pluginDescriptor": Object {
            "name": "OptimizeCssAssetsWebpackPlugin",
          },
        },
      ],
      "runtimeChunk": Object {
        "name": "manifest",
      },
      "splitChunks": Object {
        "cacheGroups": Object {
          "async-vendors": Object {
            "chunks": "async",
            "minChunks": 2,
            "name": "async-vendors",
            "priority": 0,
            "test": /node_modules/,
          },
          "vendors": Object {
            "chunks": "initial",
            "name": "vendors",
            "priority": -10,
            "test": /node_modules/,
          },
        },
      },
    },
    "output": Object {
      "chunkFilename": "static/js/[name].[chunkhash:8].chunk.js",
      "devtoolModuleFilenameTemplate": [Function],
      "filename": "static/js/[name].[chunkhash:8].js",
      "path": "/Users/kyle/dev/libraries/medpack/build",
      "publicPath": "/",
    },
    "plugins": Array [
      HtmlWebpackPlugin {
        "assetJson": undefined,
        "childCompilationOutputName": undefined,
        "childCompilerHash": undefined,
        "hash": undefined,
        "options": Object {
          "cache": true,
          "chunks": "all",
          "chunksSortMode": "auto",
          "compile": true,
          "excludeChunks": Array [],
          "favicon": false,
          "filename": "index.html",
          "hash": false,
          "inject": true,
          "meta": Object {},
          "minify": Object {
            "collapseWhitespace": true,
            "keepClosingSlash": true,
            "minifyCSS": true,
            "minifyJS": true,
            "minifyURLs": true,
            "removeComments": true,
            "removeEmptyAttributes": true,
            "removeRedundantAttributes": true,
            "removeStyleLinkTypeAttributes": true,
            "useShortDoctype": true,
          },
          "showErrors": true,
          "template": "/Users/kyle/dev/libraries/medpack/public/index.html",
          "templateContent": false,
          "templateParameters": [Function],
          "title": "Webpack App",
          "xhtml": false,
        },
        "version": 4,
      },
      InterpolateHtmlPlugin {
        "htmlWebpackPlugin": [Function],
        "replacements": Object {
          "NODE_ENV": "test",
          "PUBLIC_URL": "",
        },
      },
      DefinePlugin {
        "definitions": Object {
          "process.env": Object {
            "NODE_ENV": "\\"test\\"",
            "PUBLIC_URL": "\\"\\"",
          },
        },
      },
      ManifestPlugin {
        "opts": Object {
          "basePath": "",
          "fileName": "asset-manifest.json",
          "filter": null,
          "generate": null,
          "map": null,
          "publicPath": "/",
          "seed": null,
          "serialize": [Function],
          "sort": null,
          "transformExtensions": /\\^\\(gz\\|map\\)\\$/i,
          "writeToFileEmit": false,
        },
      },
      IgnorePlugin {
        "checkIgnore": [Function],
        "options": Object {
          "contextRegExp": /moment\\$/,
          "resourceRegExp": /\\^\\\\\\.\\\\/locale\\$/,
        },
      },
      MiniCssExtractPlugin {
        "options": Object {
          "chunkFilename": "static/css/[name].[contenthash:8].chunk.css",
          "filename": "static/css/[name].[contenthash:8].css",
        },
      },
    ],
  },
  "env": Object {
    "NODE_ENV": "test",
    "PUBLIC_URL": "",
  },
  "paths": Object {
    "appBuild": "/Users/kyle/dev/libraries/medpack/build",
    "appHtml": "/Users/kyle/dev/libraries/medpack/public/index.html",
    "appIndexJs": "/Users/kyle/dev/libraries/medpack/src/index.js",
    "appNodeModules": "/Users/kyle/dev/libraries/medpack/node_modules",
    "appPackageJson": "/Users/kyle/dev/libraries/medpack/package.json",
    "appPath": "/Users/kyle/dev/libraries/medpack",
    "appPublic": "/Users/kyle/dev/libraries/medpack/public",
    "appSrc": "/Users/kyle/dev/libraries/medpack/src",
    "dotenv": "/Users/kyle/dev/libraries/medpack/.env",
    "publicUrl": undefined,
    "servedPath": "/",
    "srcPaths": Array [
      "/Users/kyle/dev/libraries/medpack/src",
    ],
    "testsSetup": "/Users/kyle/dev/libraries/medpack/src/setupTests.js",
  },
}
`;
